# test_picasso

./: README.md
.github/workflows/: git-workflow.yml  main.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile_local  entrypoint.sh  pyproject.toml  pytest.ini
backend/filemanager/api/: decorators.py  serializers.py  tasks.py  urls.py  views.py
backend/filemanager/api/tests/: test_serializers.py  test_urls.py  test_views.py
backend/filemanager/filemanager/: celery.py  settings.py  test_settings.py  urls.py
backend/filemanager/files/: admin.py  models.py
backend/filemanager/files/migrations/: 0001_initial.py  0002_textdocument.py
backend/filemanager/files/tests/: test_admin.py  test_models.py
docker/: docker-compose.yml
docker/nginx/: nginx.conf  nginx.local.conf
docker_local/: docker-compose.yml
docker_local/nginx/: nginx.local.conf
