[tool.poetry]
name = "picasso test"
version = "1.0"
description = "Picasso Test"
authors = ["Александр Рассыхаев <farexzon@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2,<4.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
